--- a/app/src/main/res/menu/menuatas.xml
+++ b/app/src/main/res/menu/menuatas.xml
@@ -9,6 +9,9 @@
     <item android:id="@+id/setting"
         android:title="Setting"
         app:showAsAction="never"/>
+    <item android:id="@+id/logoutAction"
+        android:title="Log Out"
+        app:showAsAction="never"/>
 
 
 </menu>
