--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
+        android:hint="Your Password..."
         android:layout_below="@+id/emailField"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="15dp" />
